[tool.poetry]
name = "scraping-09"
version = "0.1.0"
description = ""
authors = ["Andrii Kylymnyk <a.kylymnyk@gmail.com>"]
readme = "README.md"
#packages = [{include = "scraping_09"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.8.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
